--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Sapphire Surgeons</title>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,7 +9,9 @@
     <meta
       name="description"
       content="Sapphire Surgeons are a group of highly skilled doctors that perform complex surgeries, changing the face of surgical services in Nigeria."
+      data-rh="true"
     />
+    <meta name="google-site-verification" content="7xXtWsFEQHRSZWhsHfRz0P4n5h4vrxwS78A4QnJxOzY" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,7 +30,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sapphire Surgeons</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
