React-snap installed

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,26 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0C4CAC" />
-    <meta
-      name="description"
-      content="Sapphire Surgeons are a group of highly skilled doctors that perform complex surgeries, changing the face of surgical services in Nigeria."
-      data-rh="true"
-    />
+    <!-- Primary Meta Tags -->
+      <title>Sapphire Surgeons</title>
+      <meta name="title" content="Sapphire Surgeons" />
+      <meta name="description" content="Sapphire Surgeons are a group of highly skilled doctors that perform complex surgeries, changing the face of surgical services in Nigeria." />
+
+      <!-- Open Graph / Facebook -->
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="https://sapphiresurgeons.com/" />
+      <meta property="og:title" content="Sapphire Surgeons" />
+      <meta property="og:description" content="Sapphire Surgeons are a group of highly skilled doctors that perform complex surgeries, changing the face of surgical services in Nigeria." />
+
+      <!-- Twitter -->
+      <meta property="twitter:card" content="summary_large_image" />
+      <meta property="twitter:url" content="https://sapphiresurgeons.com/" />
+      <meta property="twitter:title" content="Sapphire Surgeons" />
+      <meta property="twitter:description" content="Sapphire Surgeons are a group of highly skilled doctors that perform complex surgeries, changing the face of surgical services in Nigeria." />
+      <meta property="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/sapphire-15128.appspot.com/o/pages%2Fcov1.jpg?alt=media&token=14baf7a7-5373-41b5-beba-f55b0b7d3308" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
+
     <meta name="google-site-verification" content="7xXtWsFEQHRSZWhsHfRz0P4n5h4vrxwS78A4QnJxOzY" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
