New logo and browser icon added

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>Sapphire Surgeons</title>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/sapphireico.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0C4CAC" />
     <!-- Primary Meta Tags -->
